--- a/Magnetizing_FPG.csproj
+++ b/Magnetizing_FPG.csproj
@@ -77,21 +77,21 @@
     <Compile Include="Magnetizing_FPG\RoomProgram\RoomInstance.cs" />
     <Compile Include="Magnetizing_FPG\RoomProgram\RoomInstanceAttributes.cs" />
     <Compile Include="Magnetizing_FPG\MagnetizingRooms_ES.cs" />
-    <Compile Include="studies\Study2\ShneiderKoenig.cs" />
-    <Compile Include="studies\Study4\David.cs" />
-    <Compile Include="studies\Study4\MagnetizingRooms_HeapES.cs" />
-    <Compile Include="studies\Study4\RoomInstance_00.cs" />
+    <None Include="studies\Study2\ShneiderKoenig.cs" />
+    <None Include="studies\Study4\David.cs" />
+    <None Include="studies\Study4\MagnetizingRooms_HeapES.cs" />
+    <None Include="studies\Study4\RoomInstance_00.cs" />
     <Compile Include="Magnetizing_FPG\SpringSystem_ES.cs" />
-    <Compile Include="studies\Study5\GenerateCorridorsInBetween.cs" />
-    <Compile Include="studies\Study4\MagnetizingRooms.cs" />
-    <Compile Include="studies\Study2\SpringSystem.cs" />
+    <None Include="studies\Study5\GenerateCorridorsInBetween.cs" />
+    <None Include="studies\Study4\MagnetizingRooms.cs" />
+    <None Include="studies\Study2\SpringSystem.cs" />
     <Compile Include="FloorPlan_Generator_1Info.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="studies\Study6\TensorFields Quad.cs" />
-    <Compile Include="studies\Study6\TensorFields 3.cs" />
+    <None Include="studies\Study6\TensorFields Quad.cs" />
+    <None Include="studies\Study6\TensorFields 3.cs" />
     <Compile Include="FloorPlan_Generator_1Info.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="studies\Study7\EvoStrat.cs" />
+    <None Include="studies\Study7\EvoStrat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\HouseInstanceIcon.png" />
