--- a/Magnetizing_FPG.csproj
+++ b/Magnetizing_FPG.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Magnetizing_FPG\RoomProgram\HouseInstanceTextInput.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
