--- a/Magnetizing_FPG.csproj
+++ b/Magnetizing_FPG.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug32</Configuration>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
@@ -15,7 +15,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug32|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,15 +23,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug64|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -43,59 +34,55 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="clipper_library">
-      <HintPath>References\clipper_library.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="RhinoCommon">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\RhinoCommon.dll</HintPath>
+      <HintPath>C:\Program Files\Rhino 7\System\RhinoCommon.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Grasshopper">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\References\Grasshopper.dll</HintPath>
+      <HintPath>C:\Program Files\Rhino 7\Plug-ins\Grasshopper\Grasshopper.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="GH_IO">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\GH_IO.dll</HintPath>
+      <HintPath>C:\Program Files\Rhino 7\Plug-ins\Grasshopper\GH_IO.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FloorPlan_Generator_1Info.cs" />
+    <Compile Include="Magnetizing_FPG\MagnetizingRooms_ES.cs" />
+    <Compile Include="Magnetizing_FPG\RoomProgram\HouseInstance.cs" />
+    <Compile Include="Magnetizing_FPG\RoomProgram\HouseInstanceAttributes.cs" />
+    <Compile Include="Magnetizing_FPG\RoomProgram\IHouseInstance.cs" />
+    <Compile Include="Magnetizing_FPG\RoomProgram\IRoomInstance.cs" />
     <Compile Include="Magnetizing_FPG\RoomProgram\HouseInstanceTextInput.cs" />
+    <Compile Include="Magnetizing_FPG\RoomProgram\RoomInstance.cs" />
+    <Compile Include="Magnetizing_FPG\RoomProgram\RoomInstanceAttributes.cs" />
+    <Compile Include="Magnetizing_FPG\SpringSystem_ES.cs" />
+    <Compile Include="Magnetizing_FPG\Utils\Constants.cs" />
+    <Compile Include="Magnetizing_FPG\Utils\Randomizer.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Magnetizing_FPG\RoomProgram\HouseInstance.cs" />
-    <Compile Include="Magnetizing_FPG\RoomProgram\HouseInstanceAttributes.cs" />
-    <Compile Include="Magnetizing_FPG\RoomProgram\RoomInstance.cs" />
-    <Compile Include="Magnetizing_FPG\RoomProgram\RoomInstanceAttributes.cs" />
-    <Compile Include="Magnetizing_FPG\MagnetizingRooms_ES.cs" />
     <None Include="studies\Study2\ShneiderKoenig.cs" />
+    <None Include="studies\Study2\SpringSystem.cs" />
     <None Include="studies\Study4\David.cs" />
+    <None Include="studies\Study4\MagnetizingRooms.cs" />
     <None Include="studies\Study4\MagnetizingRooms_HeapES.cs" />
     <None Include="studies\Study4\RoomInstance_00.cs" />
-    <Compile Include="Magnetizing_FPG\SpringSystem_ES.cs" />
     <None Include="studies\Study5\GenerateCorridorsInBetween.cs" />
-    <None Include="studies\Study4\MagnetizingRooms.cs" />
-    <None Include="studies\Study2\SpringSystem.cs" />
-    <Compile Include="FloorPlan_Generator_1Info.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="studies\Study6\TensorFields Quad.cs" />
     <None Include="studies\Study6\TensorFields 3.cs" />
-    <Compile Include="FloorPlan_Generator_1Info.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="studies\Study6\TensorFields Quad.cs" />
     <None Include="studies\Study7\EvoStrat.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\HouseInstanceIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -105,46 +92,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\RoomInstanceIcon.png" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="Resources\HouseInstanceIcon.png" />
     <None Include="Resources\MagnetizingRoomsIcon.png" />
+    <None Include="Resources\RoomInstanceIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\SpringSystem_ESIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
   <PropertyGroup>
     <PostBuildEvent>Copy "$(TargetPath)" "$(TargetDir)$(ProjectName).gha"
-Copy "$(TargetPath)" "%25AppData%25\Grasshopper\Libraries\$(ProjectName).gha"</PostBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug32|AnyCPU' ">
-    <StartArguments>
-    </StartArguments>
-    <StartAction>Program</StartAction>
-    <StartProgram>c:\Program Files (x86)\Rhinoceros 5\System\Rhino4.exe</StartProgram>
-    <Prefer32Bit>false</Prefer32Bit>
+Copy "$(TargetPath)" "%25AppData%25\Grasshopper\Libraries\$(ProjectName).gha"
+Erase "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <FallbackCulture>en-US</FallbackCulture>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug64|AnyCPU'">
-    <StartProgram>c:\Program Files\Rhinoceros 5 (64-bit)\System\Rhino.exe</StartProgram>
-    <StartArguments>
-    </StartArguments>
-    <StartAction>Program</StartAction>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
 </Project>
+
