Add core classes for floor plan generation
- Introduced CellState enum to define cell states in the grid.
- Created FloorPlanResult class to hold results of the floor plan generation process.
- Implemented FloorPlanSolver class containing the logic for solving the floor plan layout using an evolutionary algorithm.
- Added RoomCells and GridSolution classes to manage room dimensions and previously computed solutions.
- Developed RoomPlacementSolution class to encapsulate room placement details and ratings.
- Introduced IntPair class for managing room numbers and their adjacency priorities.

--- a/Magnetizing_FPG.csproj
+++ b/Magnetizing_FPG.csproj
@@ -67,6 +67,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Magnetizing_FPG\Core\CellState.cs" />
+    <Compile Include="Magnetizing_FPG\Core\FloorPlanResult.cs" />
+    <Compile Include="Magnetizing_FPG\Core\FloorPlanSolver.cs" />
+    <Compile Include="Magnetizing_FPG\Core\SolverData.cs" />
     <Compile Include="Magnetizing_FPG\RoomProgram\HouseInstanceTextInput.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -119,13 +123,6 @@
     <Content Include="Resources\SpringSystem_ESIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
   <PropertyGroup>
     <PostBuildEvent>Copy "$(TargetPath)" "$(TargetDir)$(ProjectName).gha"
 Copy "$(TargetPath)" "%25AppData%25\Grasshopper\Libraries\$(ProjectName).gha"</PostBuildEvent>
@@ -148,3 +145,4 @@ Copy "$(TargetPath)" "%25AppData%25\Grasshopper\Libraries\$(ProjectName).gha"</P
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
 </Project>
+
